--- a/main.css
+++ b/main.css
@@ -16,7 +16,85 @@
   width: 50px;
   height: 50px;
   border: 3px solid red;
+  position: absolute;
 }
 #title-1 {
   text-align: center;
+}
+#box-2 {
+  right: 0;
+  top: 0;
+  border: 2px solid red;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+#box-3 {
+  bottom: 0;
+  left: 0;
+  border: 2px solid red;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+#box-4 {
+  bottom: 0;
+  right: 0;
+  border: 2px solid red;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+#box-1 {
+  top: 0;
+  left: 0;
+  border: 2px solid red;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+#container-2 {
+  margin: 12px;
+  width: 300px;
+  height: 300px;
+  border: 3px solid rgb(0, 132, 255);
+  position: relative;
+}
+#box-5 {
+  top: 0;
+  left: 0;
+  border: 2px solid red;
+  position: initial;
+  width: 50px;
+  height: 50px;
+}
+#box-6 {
+  bottom: 50px;
+  left: 50px;
+  border: 2px solid red;
+  position: inherit;
+  width: 50px;
+  height: 50px;
+}
+#box-7 {
+  bottom: 100px;
+  left: 100px;
+  border: 2px solid red;
+  position: inherit;
+  width: 50px;
+  height: 50px;
+}
+#box-8 {
+  bottom: 150px;
+  left: 150px;
+  border: 2px solid red;
+  position: inherit;
+  width: 50px;
+  height: 50px;
+}
+#title-2 {
+  position: absolute;
+  text-align: center;
+  left: 90px;
+  bottom: 150px;
 }
